--- a/index.css
+++ b/index.css
@@ -8,19 +8,30 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background: #dfdfdf;
 }
 
 .board {
 	/* margin: 0 auto; */
 	display: inline-grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 10px;
+	grid-gap: 0.2em;
 	/* justify-items: center; */
 	/* justify-content: space-around; */
 }
 
 .board > * {
-	border: 1px solid;
-	text-align: center;
+	display: flex;
+	font-size: 24pt;
+	font-weight: bold;
+	color: #444;
+	justify-content: center;
+	align-items: center;
+	/* border: 1px solid; */
+	box-shadow: 1px 1px 2px gray;
+	border-radius: 20px;
+	background-color: white;
 	padding: 1em;
+	width: 1em;
+	height: 1em;
 }
