--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
 .board > * {
 	display: flex;
 	font-size: 24pt;
-	font-weight: bold;
+	font-weight: 900;
 	color: #444;
 	justify-content: center;
 	align-items: center;
