--- a/index.css
+++ b/index.css
@@ -15,14 +15,16 @@ body {
 	/* margin: 0 auto; */
 	display: inline-grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 0.2em;
+	grid-gap: 1vmin;
 	/* justify-items: center; */
 	/* justify-content: space-around; */
+	width: 80vmin;
+	height: 80vmin;
 }
 
 .board > * {
 	display: flex;
-	font-size: 40pt;
+	font-size: 10vmin;
 	font-family: 'Kanit', sans-serif;
 	font-weight: 900;
 	color: #444;
@@ -30,10 +32,8 @@ body {
 	align-items: center;
 	/* border: 1px solid; */
 	box-shadow: 1px 1px 2px gray;
-	border-radius: 20px;
+	border-radius: 15%;
 	background-color: white;
-	width: 2em;
-	height: 2em;
 }
 
 .underline {
