--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: ##f3772d;
+	background: #f3772d;
 }
 
 .board {
