Recolour tile background to off-white

--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 	/* border: 1px solid; */
 	box-shadow: 0.2vmin 0.2vmin 0.4vmin #9b280d;
 	border-radius: 15%;
-	background-color: white;
+	background-color: #fffbeb;
 }
 
 .underline {
