Unblur, recolour and adjust box shadow

--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 	align-items: center;
 	/* border: 1px solid; */
 	border-radius: 15%;
-	box-shadow: 0.2vmin 0.2vmin 0.4vmin #9b280d;
+	box-shadow: 0 0.5vmin 0 #bc4415;
 }
 
 .underline {
